operator/pkg/gateway-api/testdata/gateway/httproute-timeout-backend-request/input/httproute-timeout-backend-request.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-request-timeout
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /backend-timeout
    backendRefs:
    - name: infra-backend-v1
      port: 8080
    timeouts:
      backendRequest: 500ms
  - matches:
    - path:
        type: PathPrefix
        value: /disable-backend-timeout
    backendRefs:
    - name: infra-backend-v1
      port: 8080
    timeouts:
      backendRequest: "0s"
